--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,7 @@ a.comment-reply-link_a {color:#cf3f74;}
 .checklist-item-danger:before {background-color:#f5365c;}
 .checklist-item-warning:before {background-color:#fb6340;}
 .checklist-item-golden:before {background-color:#fcb105;}
+.iframe-plus {width:100%;height:498px;}
 @media only screen and (max-width:990px) {.post-thumbnail {margin:0 0 30px;}}
 @media (max-width:767px ) {
 .boxmoe-login {float:left;padding-top:10px;}
@@ -442,6 +443,7 @@ a.comment-reply-link_a {color:#cf3f74;}
 section,.section {margin:60px 0;}
 .search_form_inner {margin:0 auto;position:fixed;left:50%;margin-left:0;left:0;}
 .site-main {padding:15px 0 0;}
+.iframe-plus {width:100%;height:220px;}
 #commentform .avatar-lg {display:none;}
 }
 @media (max-width:992px) {
