--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,10 +21,10 @@ p {color:#5F6F81;font-weight:300;cursor:url(../images/texto.cur),auto}
 h1,h2,h3,h4,h5,h6 {font-weight:700;}
 h1 {font-size:40px;}
 h2 {font-size:36px;}
-h3 {font-size:24px;letter-spacing:1px;font-weight:400;}
-h4 {font-size:20px;letter-spacing:1px;font-weight:400;}
-h5 {font-size:16px;letter-spacing:1px;font-weight:400;}
-h6 {font-size:14px;letter-spacing:1px;font-weight:400;}
+h3 {font-size:24px;font-weight:400;}
+h4 {font-size:20px;font-weight:400;}
+h5 {font-size:16px;font-weight:400;}
+h6 {font-size:14px;font-weight:400;}
 ol,ul {list-style:none;}
 textarea {height:100px;resize:none;}
 b,strong {font-weight:600;}
